--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -41,6 +41,10 @@
     <string name="pref_autostart_summary">L’application enregistrera au démarrage du téléphone</string>
     <string name="pref_external_title">Autoriser les actions externes</string>
     <string name="pref_external_summary">Permet de recevoir des commandes d’autres applications pour faciliter l’automatisation et la planification des tâches.</string>
+    <string name="pref_use_existing_track_title">Utiliser la piste existante lorsqu\'elle n\'est pas synchronisée</string>
+    <string name="pref_use_existing_track_summary">Si vous êtes autorisé à créer une nouvelle piste lorsqu\'elle n\'est pas encore synchronisée, utilisez la piste existante au lieu de la nouvelle</string>
+    <string name="pref_allow_new_track_when_not_sync_title">Autoriser une nouvelle piste lorsqu\'une piste existante n\'est pas synchronisée</string>
+    <string name="pref_allow_new_track_when_not_sync_summary">Autoriser une nouvelle piste lorsqu\'une piste existante n\'est pas synchronisée</string>
     <string name="pref_provider_title">Fournisseur de position</string>
     <string name="pref_provider_summary">Le positionnement peut être fourni par le GPS, le réseau ou les deux. Utiliser les deux fournisseurs donnera de meilleurs résultats mais utilisera plus de batterie.</string>
     <string name="pref_units_title">Unités</string>
