--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -74,6 +74,7 @@
     <string name="summary_distance" comment="1-distance, 2-unit name">%1$s %2$s</string>
     <plurals name="summary_positions">
         <item quantity="one">%d posició</item>
+        <item quantity="many">%d posicions</item>
         <item quantity="other">%d posicions</item>
     </plurals>
     <string name="summary_duration">%1$d h %2$d min</string>
@@ -104,6 +105,7 @@
     <string name="export_started">Exportació iniciada</string>
     <plurals name="label_positions_behind">
         <item quantity="one">%d posició pendent</item>
+        <item quantity="many">%d posicions pendents</item>
         <item quantity="other">%d posicions pendents</item>
     </plurals>
     <string name="track_server_setup_warning">Si canvies la configuració del servidor no serà possible sincronitzar la ruta en curs.</string>
