--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -75,6 +75,7 @@
     <string name="summary_distance" comment="1-distance, 2-unit name">%1$s %2$s</string>
     <plurals name="summary_positions">
         <item quantity="one">%d posizione</item>
+        <item quantity="many">%d posizioni</item>
         <item quantity="other">%d posizioni</item>
     </plurals>
     <string name="summary_duration">%1$d h %2$d min</string>
@@ -105,6 +106,7 @@
     <string name="export_started">Esportazione iniziata</string>
     <plurals name="label_positions_behind">
         <item quantity="one">%d posizione indietro</item>
+        <item quantity="many">%d posizioni indietro</item>
         <item quantity="other">%d posizioni indietro</item>
     </plurals>
     <string name="track_server_setup_warning">Se cambi impostazioni del server potresti non avere la possibilità di sincronizzare la traccia corrente.</string>
